// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get --homepage should throw NotFoundHomepageError if there is no "homepage" in package.json 1`] = `"Could not find homepage link for module \\"test\\"."`;

exports[`get --repo should throw NotFoundRepositoryError if there is no "repository" in package.json 1`] = `"Could not find repository link for module \\"test\\"."`;

exports[`get should disable colors 1`] = `
"[4mtest[24m
└─┬ [2manother[22m
  └── 1.0.0
"
`;

exports[`get should get the version of a module in depth 1`] = `
"[4mtest[24m
└─┬ [2manother[22m
  └── [37m1.0.0[39m
"
`;

exports[`get should get the version of a single module 1`] = `
"[4mtest[24m
└── [37m1.0.0[39m [2m[33m(devDependencies, npm install test)[39m[22m
"
`;

exports[`get should get the version of a single module when in a scoped package 1`] = `
"[4m@scope/test[24m
└── [37m1.0.0[39m
"
`;

exports[`get should get the version of a single module when not starting at the root 1`] = `
"[4mtest[24m
└── [37m1.0.0[39m [2m[33m(devDependencies, npm install test)[39m[22m
"
`;

exports[`get should print versions in three levels deep including ancestors 1`] = `
"[4mdep-of-dep-of-dep[24m
└─┬ [2mdep[22m
  └─┬ [2mdep-of-dep[22m
    └── [37m1.0.0[39m
"
`;

exports[`get should show a message when no module has found 1`] = `"Could not find any module by the name: \\"not-exist\\"."`;

exports[`get should suggest an alternative when no module has found and there is an alternative with an edit distance smaller than 2 1`] = `"Could not find any module by the name: \\"dest\\". Did you mean \\"[1mt[22mest\\"?"`;

exports[`get should suggest an alternative when no module has found and there is an alternative with an edit distance smaller than 2 2`] = `"Could not find any module by the name: \\"dest\\". Did you mean \\"[1mt[22mest\\"?"`;
